Revision history for Perl extension Geo::GDAL::FFI

0.12 unreleased

0.11 December 19, 2023
    - Removed use of to FFI::Platypus::Declare, now discouraged.
    - Add Layer::GetFeatureCount method
    - Bugfixes

0.10 July 10, 2023
     - Add dependency to FFI::Platypus::Declare
     - Update from GDAL 3.4 and add MakeValid method to Geometry
     - Add Normalize method to Geometry
     - Update to gdal 3.7
     - Make Band inherit from Object

0.09 Mar 16, 2021
     - ?

0.08 May 15, 2020
     - Update GDAL API to 3.1.0
     - add a Dataset::GetLayerCount method
     - Add POD for GetLayerCount
     - Add Dataset::GetLayerCount method
     - Raise exceptions when invalid layers are accessed via Dataset::GetLayer
     - Better handling of GDAL warnings and debug messages.

0.07 Dec 9, 2018
     - Layer GetExtent, GetName, GetParentDataset
     - Dataset ExecuteSQL
     - Geometry GetEnvelope, GetEnvelope3D

0.06 Nov 8, 2018
     - BREAKING CHANGE: GetDriver and Open are not methods any more.
     - Refuse to handle 64 bit int data in non-64 bit Perl
     - Handle CSL arguments in GDAL API
     - Layer Intersection etc methods
     - Geometry exporter methods
     - Initialization in BEGIN

0.05_03 May 16, 2018 (yet another test release)
     - Set GDAL_DATA only if gdal.pc is found and datadir exists.

0.05_02 May 16, 2018 (yet another test release)
     - If Perl does not support 64 bit integers, frown upon them as field values

0.05 May 16, 2018
     - Explitly set GDAL_DATA

0.04 May 2, 2018
     - HaveGEOS method for tests.

0.03 Apr 27, 2018
     - Replace failed 0.02.

0.02 Apr 27, 2018
    - Fix get/set for GDAL metadata.
    - Separate classes into their own files.

0.01 Apr 6, 2018
    - Included all basic functionality but lots of docs and methods to do.
    